--- a/index.htm
+++ b/index.htm
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>KALKULATOR DO SREDNIEJ!</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <title> KALKULATOR DO SREDNIEJ!!! </title>
+
   <body>
         <h1>OBLICZ SWOJA SREDNIA!</h1>
     <ul>
